feat: tutorials CRUD
