# src/controllers/courseCurriculum.controller.ts
@@ -1,0 +1,80 @@
+import { NextFunction, Request, Response } from 'express';
+import { Course } from '@/interfaces/course.interface';
+import { CurriculumSection } from '@/interfaces/curriculumSection.interface';
+import CurriculumSectionService from '@/services/courseCurriculum.service';
+
+class CurriculumSectionController {
+  public curriculumSectionService = new CurriculumSectionService();
+
+  public addCurriculum = async (
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ) => {
+    try {
+      const curriculumDetails = req.body;
+      const response = await this.curriculumSectionService.addSection({
+        curriculumDetails,
+      });
+      res.status(200).send(response);
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  public viewCurriculum = async (
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ) => {
+    try {
+      const { courseId } = req.params;
+      const response: CurriculumSection[] =
+        await this.curriculumSectionService.viewSection(courseId);
+      res.status(200).send(response);
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  public updateCurriculum = async (
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ) => {
+    try {
+      const { curriculumId } = req.params;
+      const curriculumDetails = req.body;
+      const trainer = req.user;
+      curriculumDetails['id'] = curriculumId;
+
+      const response = await this.curriculumSectionService.updateSection({
+        curriculumDetails,
+        trainer,
+      });
+      res.status(200).send(response);
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  public deleteCurriculum = async (
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ) => {
+    try {
+      const trainerData = req.user;
+      const { curriculumId } = req.params;
+      const response: { count: number } =
+        await this.curriculumSectionService.deleteSection({
+          trainer: trainerData,
+          curriculumId,
+        });
+      res.status(200).send(response);
+    } catch (error) {
+      next(error);
+    }
+  };
+}
+export default CurriculumSectionController;
