# src/dtos/curriculumVideo.dto.ts
@@ -1,0 +1,9 @@
+import { IsString } from 'class-validator';
+
+export class CurriCulumVideoDto {
+  @IsString()
+  public title: string;
+
+  @IsString()
+  public video_url: string;
+}
